# MCU-Malloc-Tracker

./: .gitignore  CHANGELOG.md  CMakeLists.txt  LICENSE  README.md
.github/workflows/: ci.yml
cmake/: MCUMallocTrackerConfig.cmake.in
docs/: CONFIG.md  DESIGN.md  FILEMAP.md  INTEGRATION.md  KNOWN_LIMITS.md  MTV1_STREAM.md  README.md
examples/generate_snapshot/: main.c
examples/selftest/: main.c
examples/selftest_mtv1_streamer/: main.c
examples/selftest_phase3/: main.c
examples/selftest_phase4/: main.c
examples/selftest_phase5/: main.c
examples/selftest_phase6/: main.c
examples/verify_crc/: main.c
include/: mt_api.h  mt_config.h  mt_crc32_ieee.h  mt_hotspots.h  mt_internal.h  mt_types.h  mt_wrap.h  mtv1_config.h  mtv1_stream.h
src/: mt_core.c  mt_crc32_ieee.c  mt_dump.c  mt_fragmentation.c  mt_heap_stats.c  mt_hotspots.c  mt_snapshot.c  mtv1_stream.c
tests/: compile_fail_invalid_hook_config.c  compile_fail_invalid_wrapper_predefinition.c  wrapper_multitu.h  wrapper_multitu_main.c  wrapper_multitu_plain.c  wrapper_multitu_wrapped.c  wrapper_opt_out.c
tests/package_consumer/: CMakeLists.txt  main.c
tools/: decode_snapshot.bat  decode_snapshot.sh  mt_decode.py  mt_dump_format.md  test_crc_integration.py  test_decoder.py
tools/_vectors/: phase5_crc_expected.txt
tools/mt_viewer_c/: CMakeLists.txt  README.md
tools/mt_viewer_c/include/: mtv1_commands.h  mtv1_crc32.h  mtv1_decode_mts1.h  mtv1_filemap.h  mtv1_model.h  mtv1_platform.h  mtv1_protocol.h  mtv1_render_tui.h  mtv1_transport.h  mtv1_util.h
tools/mt_viewer_c/src/: main.c  mtv1_capture.c  mtv1_crc32.c  mtv1_decode_mts1.c  mtv1_diff.c  mtv1_export.c  mtv1_filemap.c  mtv1_model.c  mtv1_protocol.c  mtv1_render_tui.c  mtv1_replay.c  mtv1_transport.c  mtv1_transport_serial_posix.c  mtv1_transport_serial_win.c  mtv1_util.c
tools/mt_viewer_c/tests/: test_decode_mts1.c  test_diff.c  test_protocol.c
tools/mt_viewer_c/tools/: gen_vectors.py
